--- a/ansible/windows-2019.yml
+++ b/ansible/windows-2019.yml
@@ -2,21 +2,11 @@
 - hosts: all
 
   tasks:
-    - name: Download CloudbaseInit setup file
-      win_get_url:
-        url: https://cloudbase.it/downloads/CloudbaseInitSetup_1_1_2_x64.msi
-        dest: C:\CloudbaseInitSetup_1_1_2_x64.msi
-
     - name: Install CloudbaseInit
-      win_msi:
-        path: C:\CloudbaseInitSetup_1_1_2_x64.msi
-        wait: yes
-        extra_args: "/qn"
-
-    - name: Remove CloudbaseInit setup file
-      win_file:
-        path: C:\Temp\foo.conf
-        state: absent
+      win_package:
+      path: https://cloudbase.it/downloads/CloudbaseInitSetup_1_1_2_x64.msi
+      arguments:
+      - /qn
 
     - name: Install windows updates
       win_updates:
