--- a/ansible/windows-2019.yml
+++ b/ansible/windows-2019.yml
@@ -2,11 +2,21 @@
 - hosts: all
 
   tasks:
+    - name: Download CloudbaseInit setup file
+      win_get_url:
+        url: https://cloudbase.it/downloads/CloudbaseInitSetup_1_1_2_x64.msi
+        dest: C:\CloudbaseInitSetup_1_1_2_x64.msi
+
     - name: Install CloudbaseInit
       win_package:
-        path: https://cloudbase.it/downloads/CloudbaseInitSetup_1_1_2_x64.msi
+        path: C:\CloudbaseInitSetup_1_1_2_x64.msi
         arguments:
           - /qn
+
+    - name: Remove CloudbaseInit setup file
+      win_file:
+        path: C:\CloudbaseInitSetup_1_1_2_x64.msi
+        state: absent
 
     #- name: Install windows updates
     #  win_updates:
