--- a/ansible/windows-2019.yml
+++ b/ansible/windows-2019.yml
@@ -18,17 +18,17 @@
         path: C:\CloudbaseInitSetup_1_1_2_x64.msi
         state: absent
 
-    #- name: Install windows updates
-    #  win_updates:
-    #    category_names:
-    #      - CriticalUpdates
-    #      - SecurityUpdates
-    #      - UpdateRollups
-    #    reboot: yes
-    #    reboot_timeout: 10000
-    #  register: windows_updates
+    - name: Install windows updates
+      win_updates:
+        category_names:
+          - CriticalUpdates
+          - SecurityUpdates
+          - UpdateRollups
+        reboot: yes
+        reboot_timeout: 10000
+      register: windows_updates
 
-    #- name: Windows reboot
-    #  win_reboot:
-    #    reboot_timeout: 10000
-    #  when: windows_updates.reboot_required and allow_windows_reboot_during_win_updates
+    - name: Windows reboot
+      win_reboot:
+        reboot_timeout: 10000
+      when: windows_updates.reboot_required and allow_windows_reboot_during_win_updates
