Add a retry in case of random failures during win update

--- a/ansible/windows-2019.yml
+++ b/ansible/windows-2019.yml
@@ -25,3 +25,5 @@
       ignore_errors: yes
       register: windows_updates
       until: windows_updates.installed_update_count == 0
+      retries: 20
+      delay: 30
