--- a/ansible/windows-2022.yml
+++ b/ansible/windows-2022.yml
@@ -3,32 +3,27 @@
 
   tasks:
     - name: Download CloudbaseInit setup file
-      win_get_url:
+      ansible.windows.win_get_url:
         url: https://cloudbase.it/downloads/CloudbaseInitSetup_1_1_2_x64.msi
         dest: C:\CloudbaseInitSetup_1_1_2_x64.msi
 
     - name: Install CloudbaseInit
-      win_package:
+      ansible.windows.win_package:
         path: C:\CloudbaseInitSetup_1_1_2_x64.msi
         arguments:
           - /qn
 
     - name: Remove CloudbaseInit setup file
-      win_file:
+      ansible.windows.win_file:
         path: C:\CloudbaseInitSetup_1_1_2_x64.msi
         state: absent
 
     - name: Install windows updates
-      win_updates:
-        category_names:
-          - CriticalUpdates
-          - SecurityUpdates
-          - UpdateRollups
+      ansible.windows.win_updates:
         reboot: yes
         reboot_timeout: 10000
+      ignore_errors: yes
       register: windows_updates
-
-    - name: Windows reboot
-      win_reboot:
-        reboot_timeout: 10000
-      when: windows_updates.reboot_required and allow_windows_reboot_during_win_updates
+      until: windows_updates.installed_update_count == 0
+      retries: 20
+      delay: 30
