--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,10 +4,10 @@ ssh_args = -o ControlMaster=auto -o ControlPersist=30m -o ConnectionAttempts=100
 
 [defaults]
 ansible_managed = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S
-callback_whitelist = profile_tasks
+callback_whitelist = ansible.posix.profile_tasks
 fact_caching = memory
 gathering = smart
 host_key_checking = False
 retry_files_enabled = False
-stdout_callback = skippy
+display_skipped_hosts = no
 timeout = 60
