Migrate windows build to use openssh instead of winrm

--- a/ansible/windows.yml
+++ b/ansible/windows.yml
@@ -20,10 +20,8 @@
 
     - name: Install windows updates
       ansible.windows.win_updates:
+        category_names: '*'
         reboot: yes
         reboot_timeout: 10000
-      ignore_errors: yes
       register: windows_updates
       until: windows_updates.installed_update_count == 0
-      retries: 20
-      delay: 30
