--- a/ansible/windows.yml
+++ b/ansible/windows.yml
@@ -27,6 +27,7 @@
       ansible.windows.win_updates:
         category_names: '*'
         reboot: yes
-        reboot_timeout: 1800
+        reboot_timeout: 600
       register: windows_updates
       until: windows_updates.installed_update_count == 0
+      retries: 10
