--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [ssh_connection]
 pipelining = True
-ssh_args = -o ControlMaster=no -o ConnectionAttempts=100 -o UserKnownHostsFile=/dev/null
+ssh_args = -o ServerAliveInterval=30 -o ControlMaster=no -o ConnectionAttempts=100 -o UserKnownHostsFile=/dev/null
 
 
 [defaults]
