--- a/ansible/windows.yml
+++ b/ansible/windows.yml
@@ -33,3 +33,7 @@
       register: windows_updates
       until: windows_updates.installed_update_count == 0
       retries: 10
+      become: true
+      become_method: runas
+      become_user: SYSTEM
+      
