--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,6 @@
 [ssh_connection]
 pipelining = True
+retries = 10
 ssh_args = -o ServerAliveInterval=30 -o ControlMaster=no -o ConnectionAttempts=100 -o UserKnownHostsFile=/dev/null
 
 
