--- a/ansible/windows.yml
+++ b/ansible/windows.yml
@@ -14,6 +14,7 @@
     - name: Disable WinRE for 2025 servers
       ansible.windows.win_command:
         cmd: reagentc /disable
+      ignore_errors: true
       when: '"2025" in ansible_distribution' 
 
     - name: Remove WinRE partition if it exists (always last)
